# python-project-50

./: .gitignore  Makefile  README.md  file2.json  pyproject.toml
.github/workflows/: pyci.yml
fixtures/: file1.json
gendiff/: generate_diff.py
gendiff/scripts/: gendiff.py
hexlet_code/: diff_builder.py  gendiff.py  parsers.py  plain.py  stylish.py
hexlet_code/formatters/: json.py  stylish.py
scripts/: gendiff.py
tests/: test_gendiff.py  test_generate_diff.py  test_generator.py  test_json.py  test_parser.py  test_plain.py  test_stylish.py  test_utils.py
tests/fixtures/: expected_plain.txt  file1.yaml  file2.yaml
