[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["tonyshh <shalin.anton8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = 'hexlet_code.gendiff:main'



