[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["tonyshh <shalin.anton8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "hexlet_code.gendiff:main"

packages = [
  { include = "gendiff" },
]



